tests/warn/param-allow.jo
def foo() = println "foo"                     // inferred capability: stdout
def bar() = foo()                             // inferred capability: stdout

def baz() = println "baz"                     // inferred capability: stdout

def qux() receives IO.stdout = println "qux"  // explicit capability: stdout

def main =
  bar() allow none                  // error
  baz() allow IO.stdout             // OK
  qux() with IO.stdout = s => pass  // ignore output
